--- a/package.json
+++ b/package.json
@@ -1,38 +1,48 @@
 {
-  "name": "invensis-hiring-server",
-  "version": "1.0.0",
-  "description": "Invensis Hiring Portal Backend Server",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "hiring",
-    "portal",
-    "recruitment",
-    "nodejs",
-    "express",
-    "mongodb"
-  ],
-  "author": "Invensis Team",
-  "license": "MIT",
+  "name": "admin-client",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": ".",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^4.18.2",
-    "express-validator": "^7.2.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.0",
-    "nodemailer": "^7.0.5",
-    "multer": "^1.4.5-lts.1"
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
+  "scripts": {
+    "start": "PORT=3002 react-scripts start",
+    "build": "react-scripts build && npm run postbuild",
+    "postbuild": "node scripts/copy-index.js",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  }
-} 
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "proxy": "http://localhost:5002"
+}
