--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -2,6 +2,7 @@
   "name": "admin-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -15,12 +16,13 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.3",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "PORT=3002 react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run postbuild",
+    "postbuild": "node scripts/copy-index.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -43,4 +45,4 @@
     ]
   },
   "proxy": "http://localhost:5002"
-} 
+}
